force-app/main/default/objects/Case/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>This is add additional information when selecting &quot;Other&quot; from the Reported By Field for FBC Cases</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additonal information is required when &quot;Other&quot; is selected from &quot;Reported By&quot;</inlineHelpText>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>