force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <inlineHelpText>Select the Final Outcome of the case from the dropdown</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Approved</fullName>
            </value>
            <value>
                <fullName>Application Denied</fullName>
            </value>
            <value>
                <fullName>Called Customer</fullName>
            </value>
            <value>
                <fullName>Dealer Non Response</fullName>
            </value>
            <value>
                <fullName>Enrollment Processed</fullName>
            </value>
            <value>
                <fullName>Fraud Application</fullName>
            </value>
            <value>
                <fullName>Incentive Processed</fullName>
            </value>
            <value>
                <fullName>MCC Code Updated</fullName>
            </value>
            <value>
                <fullName>No Documentation Available</fullName>
            </value>
            <value>
                <fullName>Opened Ticket</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Signed Documentation Provided</fullName>
            </value>
            <value>
                <fullName>Training Scheduled</fullName>
            </value>
            <value>
                <fullName>Work Around Solution</fullName>
            </value>
            <value>
                <fullName>Large Dollar - Other</fullName>
            </value>
            <value>
                <fullName>Large Dollar – Repair/Service</fullName>
            </value>
            <value>
                <fullName>Large Dollar – Down Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>