force-app/main/default/objects/Case/fields/Outcome_Details__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use the text field to provide details on the final outcome of the case</inlineHelpText>
    <label>Outcome Details</label>
    <type>TextArea</type>
</CustomField>