force-app/main/default/objects/Case/fields/Paperwork_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paperwork Sent Date</label>
    <type>DateTime</type>
</CustomField>