force-app/main/default/objects/Case/fields/Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Customer</label>
    <type>Text</type>
</CustomField>