force-app/main/default/objects/Case/fields/Pend_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Pend_Yes_No__c</fullName>
    <label>Pend:  Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>