force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Checks/Deposits</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Commercial Banker</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Drafts</fullName>
            </value>
            <value>
                <fullName>First Cash</fullName>
            </value>
            <value>
                <fullName>Forex</fullName>
            </value>
            <value>
                <fullName>IBWS</fullName>
            </value>
            <value>
                <fullName>Investment Services</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Lockbox</fullName>
            </value>
            <value>
                <fullName>Positive Pay</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Remote Capture</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Special Projects</fullName>
            </value>
            <value>
                <fullName>Wall Street</fullName>
            </value>
            <value>
                <fullName>Wires</fullName>
            </value>
            <value>
                <fullName>DDA/MMDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>