force-app/main/default/objects/Case/fields/Product_other__c.field-meta.xml
<CustomField>
    <fullName>Product_other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product (other)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>