force-app/main/default/objects/Case/fields/Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Since_Last_Modified__c</fullName>
    <formula>IF(IsClosed=TRUE,
&quot;Closed&quot;,
IF(CASE(
MOD(DATEVALUE(CreatedDate)-DATE(1985,6,24),7), 
0,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6,CASE(MOD(TODAY()-DATEVALUE(LastModifiedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999
) 
+(FLOOR((TODAY()-DATEVALUE(LastModifiedDate))/7)*5)&gt;3,&quot;Yes&quot;,&quot;No&quot;))</formula>
    <label>Since Last Modified</label>
    <type>Text</type>
</CustomField>