force-app/main/default/objects/Case/fields/Source_of_App__c.field-meta.xml
<CustomField>
    <fullName>Source_of_App__c</fullName>
    <description>Tracks the source of dealer sourced card applications</description>
    <inlineHelpText>Input the source of the Chrysler application</inlineHelpText>
    <label>Source of App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Central</fullName>
            </value>
            <value>
                <fullName>Route One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>