force-app/main/default/objects/Case/fields/Sum_of_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Support_Case__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SF_User_Support&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Support Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>