force-app/main/default/objects/Case/fields/Support_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Support_Resolution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Resolution</label>
    <type>TextArea</type>
</CustomField>