force-app/main/default/objects/Case/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <label>Time Spent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--</fullName>
                <default>true</default>
                <label>--</label>
            </value>
            <value>
                <fullName>5 min</fullName>
            </value>
            <value>
                <fullName>15 min</fullName>
            </value>
            <value>
                <fullName>30 min</fullName>
            </value>
            <value>
                <fullName>45 min</fullName>
            </value>
            <value>
                <fullName>60 min</fullName>
            </value>
            <value>
                <fullName>75 min</fullName>
            </value>
            <value>
                <fullName>90 min</fullName>
            </value>
            <value>
                <fullName>105 min</fullName>
            </value>
            <value>
                <fullName>120 min</fullName>
            </value>
            <value>
                <fullName>135 min</fullName>
            </value>
            <value>
                <fullName>150 min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>