force-app/main/default/objects/Case/fields/Time_Spent_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_minutes__c</fullName>
    <inlineHelpText>This is where one puts in the number of MINUTES spent</inlineHelpText>
    <label>Time Spent in minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>