force-app/main/default/objects/Case/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Completed</label>
    <type>DateTime</type>
</CustomField>