force-app/main/default/objects/Case/fields/Trigger_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Criteria</label>
    <type>Checkbox</type>
</CustomField>