force-app/main/default/objects/Case/fields/User_Issue_or_Question__c.field-meta.xml
<CustomField>
    <fullName>User_Issue_or_Question__c</fullName>
    <label>User Issue or Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(PL) Precision Lender</fullName>
            </value>
            <value>
                <fullName>(R1) Resource1</fullName>
            </value>
            <value>
                <fullName>(SFO) Salesforce for Outlook</fullName>
            </value>
            <value>
                <fullName>Browser Issue/Question</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Can&#39;t price a loan</fullName>
            </value>
            <value>
                <fullName>Card Product</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>COI</fullName>
            </value>
            <value>
                <fullName>Credit Error</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Data/File Management</fullName>
            </value>
            <value>
                <fullName>Data Upload</fullName>
            </value>
            <value>
                <fullName>Dealer / Customer Service</fullName>
            </value>
            <value>
                <fullName>Did Not Apply</fullName>
            </value>
            <value>
                <fullName>DU Error</fullName>
            </value>
            <value>
                <fullName>DU Interpretation</fullName>
            </value>
            <value>
                <fullName>Duplicate Account/Contact</fullName>
            </value>
            <value>
                <fullName>Employee / Dealer Incentives</fullName>
            </value>
            <value>
                <fullName>Empower entry question</fullName>
            </value>
            <value>
                <fullName>Enrollment Assistance</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Field or Page Modifications</fullName>
            </value>
            <value>
                <fullName>Files, Notes, and Attachments</fullName>
            </value>
            <value>
                <fullName>First in the Community</fullName>
            </value>
            <value>
                <fullName>General Salesforce Question</fullName>
                <default>true</default>
                <label>General Salesforce Question</label>
            </value>
            <value>
                <fullName>General tech support issue</fullName>
            </value>
            <value>
                <fullName>Large Dollar Transactions</fullName>
            </value>
            <value>
                <fullName>Loan Program Question</fullName>
            </value>
            <value>
                <fullName>Loan Scenario Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>