force-app/main/default/objects/Case/fields/User_name__c.field-meta.xml
<CustomField>
    <fullName>User_name__c</fullName>
    <formula>$User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User name</label>
    <type>Text</type>
</CustomField>