force-app/main/default/objects/Case/fields/Weekday_Opened__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Opened__c</fullName>
    <formula>TEXT(WEEKDAY(DATEVALUE(CreatedDate)))&amp;&quot; &quot;&amp;CASE(WEEKDAY(DATEVALUE(CreatedDate)), 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;,3, &quot;Tuesday&quot;,4, &quot;Wednesday&quot;,5, &quot;Thursday&quot;, 6, &quot;Friday&quot;, 7, &quot;Saturday&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday Opened</label>
    <type>Text</type>
</CustomField>