force-app/main/default/objects/Case/fields/Wires_Charge__c.field-meta.xml
<CustomField>
    <fullName>Wires_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wires Charge</label>
    <type>Checkbox</type>
</CustomField>