force-app/main/default/objects/Case/recordTypes/CTS_Support.recordType-meta.xml
<RecordType>
    <fullName>CTS_Support</fullName>
    <active>true</active>
    <businessProcess>CTS Support</businessProcess>
    <label>CTS Support</label>
</RecordType>