force-app/main/default/objects/Case/recordTypes/ETP_SharePoint_Support.recordType-meta.xml
<RecordType>
    <fullName>ETP_SharePoint_Support</fullName>
    <active>true</active>
    <businessProcess>ETP SharePoint Support Process</businessProcess>
    <label>ETP SharePoint Support</label>
</RecordType>