force-app/main/default/objects/Case/recordTypes/FCA_Card_Cases.recordType-meta.xml
<RecordType>
    <fullName>FCA_Card_Cases</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support</businessProcess>
    <label>FCA Card Cases</label>
</RecordType>