force-app/main/default/objects/Case/recordTypes/Mortgage_Support.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Support</fullName>
    <active>true</active>
    <businessProcess>Mortgage Support</businessProcess>
    <label>Mortgage Support</label>
</RecordType>