force-app/main/default/objects/Case/recordTypes/New_CTS_Implementation.recordType-meta.xml
<RecordType>
    <fullName>New_CTS_Implementation</fullName>
    <active>true</active>
    <businessProcess>CTS Implementations</businessProcess>
    <description>This is the Case Type one uses to go through CTS Implementation Process</description>
    <label>New CTS Implementation</label>
</RecordType>