force-app/main/default/objects/Case/recordTypes/Salesforce_Project_Requests.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Project_Requests</fullName>
    <active>true</active>
    <businessProcess>Salesforce Project Requests</businessProcess>
    <description>Used by the Salesforce Support team to track project requests</description>
    <label>Salesforce Project Requests</label>
</RecordType>