force-app/main/default/objects/Case/recordTypes/SF_User_Support.recordType-meta.xml
<RecordType>
    <fullName>SF_User_Support</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support</businessProcess>
    <label>SF User Support</label>
</RecordType>