force-app/main/default/objects/Case/validationRules/Down_Payment_Required_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Down_Payment_Required_When_Closed</fullName>
    <active>true</active>
    <description>Requires the Down Payment field to be filled in prior to closing an FCA Card Case.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;FCA Card Cases&quot;,
TEXT(Down_Payment__c) = &quot;&quot;,
TEXT(Status) = &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>You must fill in the Down Payment field prior to closing the case.</errorMessage>
</ValidationRule>