force-app/main/default/objects/Case/validationRules/Enforce_CTS_Customer_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_CTS_Customer_Field</fullName>
    <active>true</active>
    <description>Force users to populate this field with a valid value</description>
    <errorConditionFormula>And(
   or( CreatedDate &lt;&gt; LastModifiedDate ), 
       ISPICKVAL(  CTS_Customer__c  , &quot;Select One&quot;),
          RecordTypeId = &quot;01230000000sg0h&quot;,
           TEXT(Status)  &lt;&gt; &#39;New&#39;
)</errorConditionFormula>
    <errorDisplayField>CTS_Customer__c</errorDisplayField>
    <errorMessage>You must select from one of the valid options in the CTS CUSTOMER picklist.</errorMessage>
</ValidationRule>