force-app/main/default/objects/Case/validationRules/Enforce_Type_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Type_Field</fullName>
    <active>true</active>
    <description>Requested by CTS to drive their users to always select a valid item from the Case Type  picklist</description>
    <errorConditionFormula>And(
    ( CreatedDate &lt;&gt; LastModifiedDate ), 
      ISPICKVAL( Case_Type__c , &quot;Select One&quot;), 
      RecordTypeId =&quot;01230000000sg0h&quot;,
      TEXT(Status)  &lt;&gt; &#39;New&#39;
)</errorConditionFormula>
    <errorDisplayField>Case_Type__c</errorDisplayField>
    <errorMessage>You must select from one of the valid options in the CASE TYPE picklist.</errorMessage>
</ValidationRule>