force-app/main/default/objects/Case/validationRules/Implementation_Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Product_Required</fullName>
    <active>false</active>
    <description>Requires a user to select an Implementation Product before saving the record.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;New CTS Implementation&quot;,
ISBLANK(CTS_Products__c))</errorConditionFormula>
    <errorMessage>You must select an Implementation Product prior to saving the record.</errorMessage>
</ValidationRule>