force-app/main/default/objects/Case/validationRules/No_Status_Change_while_on_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Status_Change_while_on_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND
  (
      RecordType.Name = &#39;New CTS Implementation&#39;,
        NOT(ISBLANK(TEXT( On_Hold_Reason__c))),
          ISCHANGED( Status)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The Status cannot be changed while the Case is &#39;On Hold&#39;</errorMessage>
</ValidationRule>