force-app/main/default/objects/Case/validationRules/Otherreason.validationRule-meta.xml
<ValidationRule>
    <fullName>Otherreason</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL( Reported_By__c , &quot;Other&quot;),
ISBLANK( Other_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Additonal information is required when &quot;Other&quot; is selected from &quot;Reported By&quot;</errorMessage>
</ValidationRule>