force-app/main/default/objects/Case/validationRules/Require_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>and(ISPICKVAL(User_Issue_or_Question__c ,&quot;Did Not Apply&quot;),  Or(ISBLANK( Date_of_Call__c ), ISBLANK ( Account_Open_Date__c ),ISBLANK ( Application_ID__c ),ISBLANK( Customer_Name__c ),ISBLANK( Customer_Phone_Number__c ), ISBLANK ( Employee_they_worked_with__c ), ISBLANK( SID_that_Submitted_Application__c), ISBLANK( Name_that_Submitted_Application__c )))</errorConditionFormula>
    <errorMessage>If the reason for the case is &quot;DNA&quot;, then all fields in the Description Information section must be populated.</errorMessage>
</ValidationRule>